--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,5 @@
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=lovense420
-MONGODB_URI=mongodb://localhost:27017
+MONGODB_URI=mongodb+srv://Admin:Kefini360@cluster0.5ib26.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 MONGODB_DB=lovense
 JWT_SECRET=lovensesecret
