--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,5 @@
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=lovense420
 MONGODB_URI=mongodb+srv://Admin:Kefini360@cluster0.5ib26.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_DB=Lovense-db
 JWT_SECRET=lovensesecret
