--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.3",
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie": "^1.0.0",
     "@types/node": "20.17.5",
     "@types/react": "18.3.12",
     "@types/react-dom": "18.3.0",
