--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,5 @@
     "incremental": true
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "types"],
-  "exclude": ["node_modules"],
-  "typeRoots": ["./types", "./node_modules/@types"]
+  "exclude": ["node_modules"]
 }
