--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "aos": "^2.3.4",
     "axios": "1.8.4",
     "bcrypt": "^5.1.1",
+    "cookie": "^1.0.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.488.0",
     "mongodb": "^6.15.0",
