--- a/.env.local
+++ b/.env.local
@@ -3,3 +3,5 @@ NEXTAUTH_SECRET=lovense420
 MONGODB_URI=mongodb+srv://Admin:Kefini360@cluster0.5ib26.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 MONGODB_DB=Lovense-db
 JWT_SECRET=lovensesecret
+MONGODB_DB=Lovense-db
+NEXT_PUBLIC_BASE_URL=http://localhost:3000
