--- a/.env.local
+++ b/.env.local
@@ -1,8 +1,6 @@
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=lovense420
-MONGODB_URI_A=mongodb+srv://Admin:Kefini360@cluster0.5ib26.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-MONGODB_URI=mongodb://localhost:27017/
-MONGODB_DB=lovense
-MONGODB_DB_=Lovense-db
+MONGODB_URI=mongodb+srv://Admin:Kefini360@cluster0.5ib26.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_DB=Lovense-db
 JWT_SECRET=lovensesecret
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
